Something overlay UI

--- a/ArtOfRallySuiVR.csproj
+++ b/ArtOfRallySuiVR.csproj
@@ -46,5 +46,9 @@
       <HintPath>D:\Steam\steamapps\common\artofrally\artofrally_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:\Steam\steamapps\common\artofrally\artofrally_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
 </Project>
