--- a/Source/ArtOfRallySuiVR.csproj
+++ b/Source/ArtOfRallySuiVR.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>Release\BepInEx\plugins\</OutputPath>
+    <OutputPath>..\Release\BepInEx\plugins\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
